media: enrich transcode task (codec,duration,360p/480p) + add codec filter; schema refreshed
